# simple-solana-program

./: LICENSE  README.md  run.sh
client/: Cargo.toml  run.sh
client/src/: README  client.rs  lib.rs  utils.rs
program/: Cargo.toml
program/src/: lib.rs
src/: client.rs  lib.rs  main.rs  utils.rs
